--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="nav-location">Lokasi</div>
             <div class="nav-liturgi">Liturgi</div>
             <div class="nav-time">Waktu</div>
-            
+            <div class="nav-ayat">Ayat Alkitab</div>
         </div>
     </div>
     <div class="content-tema">
@@ -100,6 +100,14 @@
                 
             </div>
             <i class="ph ph-arrow-fat-line-left" id="arrowTime"></i>
+        </div>
+        <div class="content-ayat">
+        <div class="ayat">
+            <h3>ayat Alkitab</h3>
+            <div class="container-img-ayat">
+                <img src="ayat alkitab.png" alt="ayat Alkitab" class="img-ayat">
+            </div>
+            <i class="ph ph-arrow-fat-line-left" id="arrowAyat"></i>
         </div>
     </div>
     <script src="script.js"></script>
