--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             <i class="ph ph-arrow-fat-line-left" id="arrowTime"></i>
         </div>
         <div class="content-ayat">
+    </div>
+    <div class="content-ayat">
         <div class="ayat">
             <h3>ayat Alkitab</h3>
             <div class="container-img-ayat">
