--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
     <div class="content-ayat">
         <div class="ayat">
-            <h3>ayat Alkitab</h3>
+            <h3>ayat alkitab</h3>
             <div class="container-img-ayat">
                 <img src="ayat alkitab.png" alt="ayat Alkitab" class="img-ayat">
             </div>
