--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 <i class="ph ph-arrow-fat-line-left" id="arrowLocation"></i>
         </div>
     </div>
-    <div class="content-liturgi">
+<!--     <div class="content-liturgi">
         <div class="liturgi">
             <h3>Liturgi</h3>
             <div class="container-img-liturgi">
                 <a href="TATA IBADAH WILAYAH-juni.docx">Klik disini</a>
             </div>     
             <i class="ph ph-arrow-fat-line-left" id="arrowLiturgi"></i>
-        </div>
+        </div> -->
         
     </div>
     <div class="content-time">
@@ -103,7 +103,7 @@
         </div>
         <div class="content-ayat">
     </div>
-    <div class="content-ayat">
+<!--     <div class="content-ayat">
         <div class="ayat">
             <h3>ayat Alkitab</h3>
             <div class="container-img-ayat">
@@ -111,7 +111,7 @@
             </div>
             <i class="ph ph-arrow-fat-line-left" id="arrowAyat"></i>
         </div>
-    </div>
+    </div> -->
     <script src="script.js"></script>
    
     
