--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>PF</h3>
             <div class="container-img-kotbah">
                 <img src="pdt Melani.png" alt="pengkhotbah" class="img-kotbah">                    
-                <h3>Pdt :   Henni Herlina</h3>
+                <h3>Pdt :   Melani Ayub Egne</h3>
                 <i class="ph ph-arrow-fat-line-left" id="arrowPf"></i>
             </div>
         </div>
