--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="location">
                 <h3>Lokasi</h3>
                 <div class="container-img-locatiion">
-                    <img src="alamat.png" alt="lokasi" class="img-location">
+                    <img src="Lokasi1.png" alt="lokasi" class="img-location">
                     <!-- <p>Keluarga Bpk. Zainudin Sianturi</p>
                     <p>Perum Taman Alamanda </p>
                     <p>Blok F16 / no. 8</p>
