--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="location">
                 <h3>Lokasi</h3>
                 <div class="container-img-locatiion">
-                    <img src="Bpk Hotman.png" alt="lokasi" class="img-location">
+                    <img src="bpk Hotman.png" alt="lokasi" class="img-location">
                     <p><strong> Bpk. Hotman Dules Tambunan.</strong></p>
                     <p><strong>
                         Perum Libersa Mansion Cluster Asoka  
