--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     <p><strong>
                         Perum Libersa Mansion Cluster Asoka  
                     </strong></p>
-                    <p><strong> AB 07,</strong></p>
-                    <p><strong> Satria, Bekasi </strong></p>
+                    <p><strong>Blok AB 07,</strong></p>
+                    <p><strong>Karang Satria, Bekasi </strong></p>
                 </div>
                 <i class="ph ph-arrow-fat-line-left" id="arrowLocation"></i>
         </div>
